@@ -37,7 +37,7 @@ a:hover {
 
 <p class="title">SWF-NeedsRecompile</p>
 
-<p class="subtitle">Last update: <a href="perl/SWF-NeedsRecompile-1.01-docs">v1.01</a>, 2005-09-21</p>
+<p class="subtitle">Last update: <a href="perl/SWF-NeedsRecompile-1.02-docs">v1.02</a>, 2005-09-27</p>
 
 
 <table cellspacing="0" cellpadding="2" border="1" width="100%">
@@ -49,6 +49,22 @@ a:hover {
     </tr>
   </thead>
   <tbody>
+    
+      <tr>
+        <td valign="top"><a href="#perl">Perl</a></td>
+        <td valign="top">
+          <a href="perl/SWF-NeedsRecompile-1.02.tgz">SWF-NeedsRecompile-1.02.tgz</a>
+          (<a href="perl/SWF-NeedsRecompile-1.02.tgz.md5">MD5</a>)
+          <br>
+          <a href="perl/SWF-NeedsRecompile-1.02.zip">SWF-NeedsRecompile-1.02.zip</a>
+          (<a href="perl/SWF-NeedsRecompile-1.02.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="perl/SWF-NeedsRecompile-1.02-docs">SWF-NeedsRecompile-1.02-docs</a>
+          
+        </td>
+        <td valign="top">Tue Sep 27 09:29:09 2005</td>
+      </tr>
     
       <tr>
         <td valign="top"><a href="#perl">Perl</a></td>
