@@ -1,3 +1,9 @@
+2005-09-27 09:37  chris
+
+	* MANIFEST, lib/SWF/NeedsRecompile.pm, t/swf.t: v1.02 Add
+	  overlooked test assets to the MANIFEST (their omission is causing
+	  tests to fail.  Doh!)
+
 2005-09-21 17:22  chris
 
 	* MANIFEST.SKIP, example/broken.fla, example/example.fla,
